# Cliche

./: .gitignore  ANONYMOUS_RATING_APP_PLAN.md  FEATURE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  implementation_plan.md.resolved  render.yaml
.qwen/: PROJECT_SUMMARY.md
apps/backend/: .env.example  pyproject.toml  requirements.txt  run_migrations.py  test_db.py
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/routes/: __init__.py  admin.py  comments.py  posts.py  reports.py  upload.py  votes.py
apps/backend/app/schemas/: __init__.py  post.py
apps/backend/app/utils/: __init__.py  cache.py  name_generator.py  trending.py  vote_security.py
apps/frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/frontend/app/activity/: page.tsx
apps/frontend/app/admin/: page.tsx
apps/frontend/app/create/: page.tsx
apps/frontend/app/my-posts/: page.tsx
apps/frontend/components/: Providers.tsx
apps/frontend/components/animations/: buttonAnimations.tsx  cardAnimations.tsx  index.ts  loadingAnimations.tsx  pageTransitions.tsx
apps/frontend/hooks/: index.ts  useAnalytics.tsx  usePost.tsx  usePullToRefresh.tsx  useRealtimeSubscription.ts
apps/frontend/lib/: api.ts  fingerprint.ts  metadata.ts  nameGenerator.ts  storage.ts  types.ts  utils.ts
apps/frontend/public/: manifest.json
database/migrations/: 001_initial_schema.sql  002_add_browser_id_to_posts.sql  003_admin_sessions.sql
(+29 files in other folders)
